Add dynamic content loading

--- a/assets/historicstyles.scss
+++ b/assets/historicstyles.scss
@@ -3,6 +3,10 @@
     max-width: 100%;
   }
 
+  h1 {
+    font-size: 1.6em;
+  }
+
   &.theme--dark {
     &.style-1995 {
       background-color: #999;
