--- a/assets/historicstyles.scss
+++ b/assets/historicstyles.scss
@@ -10,7 +10,7 @@
   &.theme--dark {
     &.style-1992 {
       background-color: #999;
-      color: white;
+      color: black;
     }
 
     &.style-1997 {
