Add cursor:pointer to the era slider

--- a/assets/css/general.scss
+++ b/assets/css/general.scss
@@ -10,4 +10,8 @@
   &.theme--dark .nuxt-content-editor {
     color: white;
   }
+
+  .eraslider .v-slider.v-slider--horizontal {
+    cursor: pointer;
+  }
 }
