Add content and links

--- a/assets/css/era1989.scss
+++ b/assets/css/era1989.scss
@@ -137,6 +137,12 @@
       }
     }
 
+    .contact {
+      li::before {
+        content: '- ';
+      }
+    }
+
     .contactform {
       label {
         display: block;
