--- a/assets/css/era1992.scss
+++ b/assets/css/era1992.scss
@@ -28,5 +28,31 @@
         border: 2px ridge;
       }
     }
+
+    textarea,
+    input {
+      &:not([type="submit"]) {
+        background: white;
+        border: 2px inset;
+
+        &:focus-visible {
+          outline: none;
+        }
+      }
+
+      &.submitbutton {
+        background-color: #ccc;
+        border: 5px outset;
+        border-radius: 7px;
+        padding: 5px;
+        color: black;
+      }
+    }
+
+    .contactform {
+      label {
+        margin-right: 10px;
+      }
+    }
   }
 }
