Add 'slow load' effect to the image in 1992
H/T to @ADubhlaoich for this idea!

Fixes #21

--- a/assets/css/era1997.scss
+++ b/assets/css/era1997.scss
@@ -35,8 +35,11 @@
     max-width: none;
     font-family: 'Times New Roman', Times, serif;
 
-    .mainpicture img {
+    .imageplaceholder {
+      margin: 0 auto;
       border-style: outset;
+      height: 200px;
+      width: 200px;
     }
 
     .whatidopicker {
