--- a/assets/css/era1992.scss
+++ b/assets/css/era1992.scss
@@ -22,6 +22,18 @@
       }
     }
 
+    .imageplaceholder {
+      border: 1px solid black;
+      height: 200px;
+      width: 200px;
+    }
+
+    .imagecontainer {
+      height: 0;
+      overflow-y: hidden;
+      animation: rolldown 10s forwards;
+    }
+
     table {
       th,
       td {
