--- a/assets/css/general.scss
+++ b/assets/css/general.scss
@@ -15,3 +15,9 @@
     cursor: pointer;
   }
 }
+
+@keyframes rolldown {
+  0% { height: 0; }
+  50% { height: 100px; }
+  100% { height: 200px; }
+}
