Make the image animation restart when component remounts
Fixes #22

--- a/assets/css/era1992.scss
+++ b/assets/css/era1992.scss
@@ -28,7 +28,7 @@
       width: 200px;
     }
 
-    .imagecontainer {
+    .slowloadimage {
       height: 0;
       overflow-y: hidden;
       animation: rolldown 10s forwards;
