--- a/assets/css/era2012.scss
+++ b/assets/css/era2012.scss
@@ -283,12 +283,12 @@
       background-color: #eedc94;
       background-repeat: repeat-x;
       background-image: -khtml-gradient(linear, left top, left bottom, from(#fceec1), to(#eedc94));
-      background-image: -moz-linear-gradient(top, #fceec1, #eedc94);
-      background-image: -ms-linear-gradient(top, #fceec1, #eedc94);
+      background-image: -moz-linear-gradient(to bottom, #fceec1, #eedc94);
+      background-image: -ms-linear-gradient(to bottom, #fceec1, #eedc94);
       background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fceec1), color-stop(100%, #eedc94));
-      background-image: -webkit-linear-gradient(top, #fceec1, #eedc94);
-      background-image: -o-linear-gradient(top, #fceec1, #eedc94);
-      background-image: linear-gradient(top, #fceec1, #eedc94);
+      background-image: -webkit-linear-gradient(to bottom, #fceec1, #eedc94);
+      background-image: -o-linear-gradient(to bottom, #fceec1, #eedc94);
+      background-image: linear-gradient(to bottom, #fceec1, #eedc94);
       // text-shadow: 0 -1px 0 rgb(0 0 0 / 25%);
       border-color: #eedc94 #eedc94 #e4c652;
       border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -355,12 +355,12 @@
         background-color: #0064cd;
         background-repeat: repeat-x;
         background-image: -khtml-gradient(linear, left top, left bottom, from(#049cdb), to(#0064cd));
-        background-image: -moz-linear-gradient(top, #049cdb, #0064cd);
-        background-image: -ms-linear-gradient(top, #049cdb, #0064cd);
+        background-image: -moz-linear-gradient(to bottom, #049cdb, #0064cd);
+        background-image: -ms-linear-gradient(to bottom, #049cdb, #0064cd);
         background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #049cdb), color-stop(100%, #0064cd));
-        background-image: -webkit-linear-gradient(top, #049cdb, #0064cd);
-        background-image: -o-linear-gradient(top, #049cdb, #0064cd);
-        background-image: linear-gradient(top, #049cdb, #0064cd);
+        background-image: -webkit-linear-gradient(to bottom, #049cdb, #0064cd);
+        background-image: -o-linear-gradient(to bottom, #049cdb, #0064cd);
+        background-image: linear-gradient(to bottom, #049cdb, #0064cd);
         text-shadow: 0 -1px 0 rgb(0 0 0 / 25%);
         border-color: #0064cd #0064cd #003f81;
         border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
