Add a credits page
Fixes #32

--- a/assets/css/era1989.scss
+++ b/assets/css/era1989.scss
@@ -79,6 +79,15 @@
     ul {
       list-style-type: none;
       padding-left: 0;
+
+      li::before {
+        content: '- ';
+      }
+
+      // Nested
+      ul {
+        margin-left: 20px;
+      }
     }
 
     hr {
