--- a/assets/css/era2012.scss
+++ b/assets/css/era2012.scss
@@ -78,6 +78,10 @@
     background-color: #888;
 
     .container {
+      a {
+        color: #1d2a74;
+      }
+
       h3 {
         color: white;
       }
