--- a/assets/css/general.scss
+++ b/assets/css/general.scss
@@ -16,6 +16,10 @@
   .eraslider .v-slider.v-slider--horizontal {
     cursor: pointer;
   }
+
+  .v-card__title {
+    word-break: normal;
+  }
 }
 
 @keyframes rolldown {
