Add recent talks and display "speak" first
- Rewrite the intro to 'speak'
- Rewrite the intro to the contact page
- Initialize with 'speak' first (rather than 'build')
- Adjust "Today" styling a bit so more text fits above the fold on load

--- a/assets/css/era2021.scss
+++ b/assets/css/era2021.scss
@@ -5,6 +5,12 @@
     margin-bottom: 0.5em;
   }
 
+  .whatido-wrapper {
+    // Override the internal padding that comes from
+    // the col-sm-9 styling
+    padding: 0;
+  }
+
   .maincontent {
     margin-bottom: 0.5em;
   }
